add second commit

--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
         </div>
         <div class="footer-section">
           <h4>Contact Me</h4>
-          <p>Email: contact@example.com</p>
-          <p>Phone: +123-456-7890</p>
+          <p>Email: singhmanika409@gmail.com</p>
+          <p>Phone: +999-014-7462</p>
         </div>
       </div>
       <div class="footer-bottom">
