--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
   <section class="about-section  second-bg-color">
           <div class="about-content">
               <div class="about-image">
-                  <img src="Portfolio-img.png" alt="About Image">
+                  <img src="manika.png" alt="About Image">
               </div>
               <div class="about-text">
                   <h2 class="">About <span class="primary-text">Me</span></h2>
