--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="This is the official portfolio of Manika Dev – Web Developer, Designer, and Creative Technologist. Explore my work in web development, UI/UX, and digital art.">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Manika Dev Portfolio" />
+   <meta property="og:description" content="Explore my web development projects and digital design work." />
+   <meta property="og:url" content="https://themanikadevportfolio.site/" />
+   <meta property="og:type" content="website" />
     <title>Manika - Developer Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
