--- a/contact.html
+++ b/contact.html
@@ -36,9 +36,9 @@
          <div class="contact-left">
              <h2 class="primary-text">Follow Us</h2>
              <div class="social-links">
-                 <div><i class="fa-brands fa-facebook"></i> <a href="#">Facebook</a></div>
-                 <div><i class="fa-brands fa-square-instagram"></i> <a href="#">Instagram</a></div>
-                 <div><i class="fa-brands fa-linkedin"></i> <a href="#">LinkedIn</a></div>
+                 <div><i class="fa-brands fa-facebook"></i> <a href="https://www.facebook.com/share/1Bi2Lh49q3/?mibextid=wwXIfr">Facebook</a></div>
+                 <div><i class="fa-brands fa-square-instagram"></i> <a href="https://www.instagram.com/manik_a1843?igsh=ZW8wdGJwYnpncWRy&utm_source=qr">Instagram</a></div>
+                 <div><i class="fa-brands fa-linkedin"></i> <a href="https://www.linkedin.com/in/manika-kumari-116134260?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app">LinkedIn</a></div>
              </div>
          </div>
 
