--- a/mainPortfolio/index.html
+++ b/mainPortfolio/index.html
@@ -9,6 +9,10 @@
    <meta property="og:description" content="Explore my web development projects and digital design work." />
    <meta property="og:url" content="https://themanikadevportfolio.site/" />
    <meta property="og:type" content="website" />
+   <meta property="og:image" content="https://www.themanikadevportfolio.site/manika.png" />
+   <meta property="og:image:type" content="image/jpeg" />
+   <meta property="og:image:width" content="1200" />
+   <meta property="og:image:height" content="630" />   
     <title>Manika - Developer Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
