--- a/mainPortfolio/index.html
+++ b/mainPortfolio/index.html
@@ -3,28 +3,53 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="This is the official portfolio of Manika Dev – Web Developer, Designer, and Creative Technologist. Explore my work in web development, UI/UX, and digital art.">
-    <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Manika Dev Portfolio" />
-   <meta property="og:description" content="Explore my web development projects and digital design work." />
-   <meta property="og:url" content="https://themanikadevportfolio.site/" />
-   <meta property="og:type" content="website" />
-   <link rel="icon" type="image/x-icon" href="https://www.themanikadevportfolio.site/manika.png">
-   <meta property="og:image" content="https://www.themanikadevportfolio.site/manika.png" />
-   <meta property="og:image:type" content="image/jpeg" />
-   <meta property="og:image:width" content="1200" />
-   <meta property="og:image:height" content="630" />   
-    <title>Manika - Developer Portfolio</title>
+  
+    <title>Manika Dev | Full Stack Developer & Creative Technologist</title>
+  
+    <meta name="description" content="Official portfolio of Manika Dev – Full Stack Developer, UI/UX Designer, and Content Creator. Explore projects in React, Django, Tailwind CSS, and creative video editing." />
+    <meta name="keywords" content="Full Stack Developer Delhi, React Developer India, Python Django Developer, UI UX Designer, Freelance Web Developer, Manika Dev, Portfolio, Frontend Backend Developer, Tailwind CSS, Video Editor" />
+    <meta name="author" content="Manika Dev" />
+    <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow" />
+    <meta name="bingbot" content="index, follow" />
+    <meta name="distribution" content="global" />
+    <meta name="language" content="en-US" />
+    <meta name="doc-type" content="public" />
+    <meta name="classification" content="Web Developer Portfolio" />
+    <meta name="country" content="India" />
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta name="revisit-after" content="5 days" />
+  
+    <!-- Open Graph (Facebook, LinkedIn, etc.) -->
+    <meta property="og:title" content="Manika Dev | Full Stack Developer Portfolio" />
+    <meta property="og:description" content="Explore my work in web development, UI/UX design, and creative video editing." />
+    <meta property="og:url" content="https://themanikadevportfolio.site/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://www.themanikadevportfolio.site/manika.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+  
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Manika Dev | Web Developer & Designer" />
+    <meta name="twitter:description" content="See my projects in React, Django, Tailwind CSS, and creative video editing." />
+    <meta name="twitter:image" content="https://www.themanikadevportfolio.site/manika.png" />
+    <meta name="twitter:url" content="https://themanikadevportfolio.site/" />
+  
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="https://www.themanikadevportfolio.site/manika.png" />
+  
+    <!-- Fonts & Icons -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;800;900&display=swap"
-      rel="stylesheet"
-    />
-      <!-- font awesome cdn link -->
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;800;900&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  
+    <!-- CSS -->
+    <link rel="stylesheet" href="style.css" />
   </head>
+  
   <body>
      <header>
           <nav>
