--- a/mainPortfolio/index.html
+++ b/mainPortfolio/index.html
@@ -18,7 +18,7 @@
     <meta name="classification" content="Web Developer Portfolio" />
     <meta name="country" content="India" />
     <meta http-equiv="cache-control" content="no-cache" />
-    <meta name="revisit-after" content="5 days" />
+   
   
     <!-- Open Graph (Facebook, LinkedIn, etc.) -->
     <meta property="og:title" content="Manika Dev | Full Stack Developer Portfolio" />
@@ -38,8 +38,10 @@
     <meta name="twitter:url" content="https://themanikadevportfolio.site/" />
   
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="https://www.themanikadevportfolio.site/manika.png" />
-  
+    <link rel="icon" type="image/png" sizes="32x32" href="https://www.themanikadevportfolio.site/manika.png">
+    <link rel="apple-touch-icon" href="https://www.themanikadevportfolio.site/manika.png">
+    <meta name="theme-color" content="#ffffff" />
+      
     <!-- Fonts & Icons -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
