--- a/mainPortfolio/index.html
+++ b/mainPortfolio/index.html
@@ -236,4 +236,13 @@ ScrollReveal().reveal('.about-section', { origin: 'bottom' });
 
 
   </script>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "url": "https://www.themanikadevportfolio.site",
+      "logo": "https://www.themanikadevportfolio.site/manika.png"
+    }
+    </script>
+    
 </html>
