--- a/mainPortfolio/e-book.html
+++ b/mainPortfolio/e-book.html
@@ -70,65 +70,17 @@
         </div>
       </nav>
     </header>
-
-    <section class="about-section second-bg-color">
-      <div class="about-content">
-        <div class="about-image">
-          <img src="manika.png" alt="About Image" />
-        </div>
-        <div class="about-text">
-          <h2 class="">About <span class="primary-text">Me</span></h2>
-          Hello! I'm Manika, a passionate developer, designer, and content
-          creator.
-
-          <p>
-            I specialize in building robust web applications using Django for
-            the backend and React with Tailwind CSS for the frontend. My focus
-            is on crafting scalable, high-performance, and user-friendly
-            applications that not only function efficiently but also provide a
-            seamless user experience.
-          </p>
-
-          <p>
-            With years of experience in development, I have worked on a variety
-            of projects, ranging from dynamic web applications to custom APIs
-            that handle complex data processing. I leverage Django's powerful
-            backend capabilities along with Celery for asynchronous task
-            management (like sending emails, background jobs, and scheduled
-            tasks). On the frontend, I use React and Tailwind CSS to build
-            modern, responsive, and visually appealing UI components.
-          </p>
-
-          <p>
-            Beyond coding, I have a deep passion for video editing and content
-            creation. I bring stories to life through high-quality video
-            editing, motion graphics, and post-production enhancements. Whether
-            it's editing promotional content, social media reels, or
-            professional videos, I aim to create engaging visuals that leave a
-            lasting impact.
-          </p>
-
-          <p>
-            I’m always open to exciting opportunities, collaborations, and
-            innovative projects. Let’s build something amazing together! 🚀✨
-          </p>
-
-          <a href="contact.html" class="cta">Contact me</a>
-        </div>
-      </div>
-    </section>
-
-    <!-- ✅ E-Book Download Section -->
-    <section class="ebook-section second-bg-color">
-      <div class="ebook-content">
-        <h2>📘 Download My Free E-book</h2>
-        <p>
-          Learn more about my journey, projects, and key insights in this
-          downloadable e-book.
-        </p>
-        <a href="e-book-googleListing.pdf" download class="cta">Download PDF</a>
-      </div>
-    </section>
+    <section class="services-section">
+     <h2>Our <span class="primary-text">Services</span></h2>
+     <div class="services-container">
+         <div class="service-card">
+             <h3>📘 Download My Free E-book of How to list website on Google</h3>
+             <p>Learn more about my journey, projects, and key insights in this
+          downloadable e-book.</p>
+          <a href="e-book-googleListing.pdf" download class="cta">Download PDF</a>
+         </div>   
+     </div>
+ </section>
 
     <footer>
       <div class="footer-container">
