--- a/mainPortfolio/e-book.html
+++ b/mainPortfolio/e-book.html
@@ -65,13 +65,14 @@
             <li><a href="/">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="services.html">Services</a></li>
+             <li><a href="e-book.html">E-book</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
       </nav>
     </header>
     <section class="services-section">
-     <h2>Our <span class="primary-text">Services</span></h2>
+     <h2>My <span class="primary-text">E-books</span></h2>
      <div class="services-container">
          <div class="service-card">
              <h3>📘 Download My Free E-book of How to list website on Google</h3>
