--- a/mainPortfolio/services.html
+++ b/mainPortfolio/services.html
@@ -24,6 +24,7 @@
                       <li><a href="/">Home</a></li>
                       <li><a href="about.html">About</a></li>
                       <li><a href="services.html">Services</a></li>
+                       <li><a href="e-book.html">E-book</a></li>
                       <li><a href="contact.html">Contact</a></li>
                   </ul>
               </div>
