--- a/mainPortfolio/index.html
+++ b/mainPortfolio/index.html
@@ -55,7 +55,7 @@
   <body>
      <header>
           <nav>
-              <div class="left">Manika's Portfolio</div>
+              <div class="left">ManikaTechIndia</div>
               <div class="menu-icon" onclick="toggleMenu()">☰</div>
               <div class="right">
                   <ul id="nav-list">
