--- a/mainPortfolio/about.html
+++ b/mainPortfolio/about.html
@@ -38,27 +38,31 @@
         <img src="manika.png" alt="About Image">
       </div>
       <div class="about-text">
-        <h2 class="">About <span class="primary-text">Me</span></h2>
-        Hello! I'm Manika, a passionate developer, designer, and content creator.
+      <h2 class="">About <span class="primary-text">Me</span></h2>
+<p>
+  Hello! I'm Manika, a passionate <strong>freelance website designer in Delhi</strong>, developer, and content creator.
+</p>
+<p>
+  I specialize in building robust web applications using Django for the backend and React with Tailwind CSS for the frontend. As one of the <strong>top 10 web development designers in Delhi</strong>, my focus is on crafting scalable, high-performance, and user-friendly applications that not only function efficiently but also provide a seamless user experience.
+</p>
+<p>
+  With years of experience as a <strong>website designer in India</strong>, I have worked on a variety of projects, ranging from dynamic websites and ecommerce platforms to custom APIs handling complex data processing. I leverage Django's powerful backend capabilities along with Celery for asynchronous task management, such as sending emails and scheduling background jobs.
+</p>
+<p>
+  On the frontend, I use React and Tailwind CSS to build modern, responsive, and visually appealing UI components. Whether you are looking for a <strong>website developer near me</strong> in Delhi NCR or across India, I offer complete solutions tailored to your goals.
+</p>
+<p>
+  Beyond coding, I have a deep passion for video editing and content creation. I bring stories to life through high-quality video editing, motion graphics, and post-production enhancements. Whether it's promotional content, social media reels, or professional videos, I aim to create engaging visuals that leave a lasting impact.
+</p>
+<p>
+  As a <strong>best website designer in Delhi</strong> committed to transparency, I provide clear project timelines and <strong>website designer in Delhi with price</strong> details upfront so you can plan confidently.
+</p>
+<p>
+  I’m always open to exciting opportunities, collaborations, and innovative projects. Let’s build something amazing together! 🚀✨
+</p>
+<a href="contact.html" class="cta">Contact me</a>
 
-        I specialize in building robust web applications using Django for the backend and React with Tailwind CSS for
-        the frontend. My focus is on crafting scalable, high-performance, and user-friendly applications that not only
-        function efficiently but also provide a seamless user experience.
 
-        With years of experience in development, I have worked on a variety of projects, ranging from dynamic web
-        applications to custom APIs that handle complex data processing. I leverage Django's powerful backend
-        capabilities along with Celery for asynchronous task management (like sending emails, background jobs, and
-        scheduled tasks). On the frontend, I use React and Tailwind CSS to build modern, responsive, and visually
-        appealing UI components.
-
-        Beyond coding, I have a deep passion for video editing and content creation. I bring stories to life through
-        high-quality video editing, motion graphics, and post-production enhancements. Whether it's editing promotional
-        content, social media reels, or professional videos, I aim to create engaging visuals that leave a lasting
-        impact.
-
-        I’m always open to exciting opportunities, collaborations, and innovative projects. Let’s build something
-        amazing together! 🚀✨
-        <a href="contact.html" class="cta">Contact me</a>
       </div>
     </div>
   </section>
