--- a/mainPortfolio/services.html
+++ b/mainPortfolio/services.html
@@ -33,30 +33,36 @@
     <section class="services-section">
      <h2>Our <span class="primary-text">Services</span></h2>
      <div class="services-container">
-         <div class="service-card">
-             <h3>Website Design & Development</h3>
-             <p>"Transforming visions into reality. We create bespoke websites that captivate, engage, and deliver results. From custom designs to seamless functionality, we've got you covered. Our services include web development, responsive des
-               ign, e-commerce solutions, and ongoing support. Let's craft your digital success story together."</p>
-         </div>
-         <div class="service-card">
-             <h3>Video Editing</h3>
-             <p>"Elevate your visuals with our expert video editing services. We bring your footage to life with precision and creativity. Our services include seamless editing, color grading, motion graphics, and more. Whether it's a promotional video,
-               vlog, or special event, we'll make it shine. Let's tell your story through compelling visuals."</p>
-         </div>
-        
-         <div class="service-card">
-             <h3>Content Writing</h3>
-             <p>"Unlock the power of words with our content writing services. We craft engaging, informative, and SEO-optimized content that resonates with your audience. From blog posts to website copy, our wordsmiths deliver compelling narratives tailored to your brand.
-               Elevate your online presence with our expertise in storytelling and digital content strategy."</p>
-         </div>
 
-         <div class="service-card">
-          <h3>Poster Designing</h3>
-          <p>Eye-catching posters that effectively convey your message.
-             Whether it's for events, promotions, social media, or branding, 
-             I create visually appealing designs that capture attention and engage your audience.
-             My designs are customized to match your theme, ensuring a professional and impactful presentation.</p>
-      </div>
+      <div class="service-card">
+    <h3>Website Design & Development</h3>
+    <p>
+        Transforming visions into reality. As a <strong>freelance website designer in Delhi</strong> and one of the <strong>top 10 web development designers in Delhi</strong>, I create bespoke websites that captivate, engage, and deliver results. From custom designs to seamless functionality, I've got you covered. My services include web development, responsive design, e-commerce solutions, and ongoing support. Whether you’re searching for a <strong>website designer in Delhi with price</strong> transparency or a trusted <strong>website developer near me</strong>, let’s craft your digital success story together.
+    </p>
+</div>
+
+<div class="service-card">
+    <h3>Video Editing</h3>
+    <p>
+        Elevate your visuals with my expert video editing services. I bring your footage to life with precision and creativity. From seamless editing and color grading to motion graphics and storytelling, I ensure your promotional videos, vlogs, and event highlights stand out. As a <strong>website designer in India</strong> who also specializes in multimedia, I help you build a consistent and impactful online presence across platforms.
+    </p>
+</div>
+
+<div class="service-card">
+    <h3>Content Writing</h3>
+    <p>
+        Unlock the power of words with engaging, informative, and SEO-optimized content that resonates with your audience. From blog posts to website copy, my content supports your brand’s growth. Whether you need persuasive copy for your business site created by the <strong>best website designer in Delhi</strong> or articles that improve your rankings, I deliver compelling narratives tailored to your goals.
+    </p>
+</div>
+
+<div class="service-card">
+    <h3>Poster Designing</h3>
+    <p>
+        Eye-catching posters that effectively convey your message. Whether it's for events, promotions, social media, or branding, I create visually appealing designs that capture attention and engage your audience. As a <strong>freelance website designer in Delhi</strong> offering a complete suite of creative services, I ensure your visual identity stays consistent across all channels.
+    </p>
+</div>
+
+
      </div>
  </section>
 
